Fix form overlap

--- a/client/src/assets/styles/desktop.css
+++ b/client/src/assets/styles/desktop.css
@@ -30,6 +30,7 @@
     }
     .landing__form__btn {
         background-color: #D6472C;
+        border: none;
         color: white;
     }
 }
